src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  background: #030015 !important;
  font-weight: 400;
  width: 100vw;
  min-height: 100vh;
  /* overflow-x: hidden; */
  /* overflow: hidden; */
  color: #fff;
}

* {
  scroll-behavior: smooth;
}

.banner {
  width: 100vw;
  min-height: 100vh;
  background-image: url("https://pixner.net/aikeu/assets/images/banner/banner-one-bg.png");
  background-position: center center;
  background-size: cover;
  overflow: hidden;
  z-index: 1;
}

.banner::before {
  position: absolute;
  top: 0px;
  left: 0;
  content: "";
  width: 500px;
  height: 500px;
  min-height: 300px;
  border-radius: 50%;
  background: rgba(75, 255, 223, 0.24);
  filter: blur(227px);
  pointer-events: none;
}
.banner::after {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  right: 0;
  content: "";
  width: 430px;
  height: 430px;
  min-height: 300px;
  border-radius: 50%;
  background: rgba(75, 169, 255, 0.44);
  filter: blur(272px);
  pointer-events: none;
}
@media screen and (max-width: 760px) {
  .banner::before {
    width: 250px;
    height: 250px;
  }
  .banner::after {
    width: 230px;
    height: 230px;
  }
}
.shop-banner {
  background-image: url("https://pixner.net/aikeu/assets/images/banner/cmn-bg.png");
  background-position: center center;
  background-size: cover;
  overflow: hidden;
  z-index: 1;
  height: 50vh;
}
.before\:transition-background::before {
  background-color: transparent !important;
}
.sellers-banner {
  background: linear-gradient(132deg, #5fec46 0%, #46e695 100%);
}

.slick-dots li button::before {
  font-size: 1rem;
  color: White !important;
}

.slick-dots li button:before {
  color: white !important;
}

.slick-prev::before {
  font-size: 2rem;
}

.slick-next::before {
  font-size: 2rem;
}

